Fix search form placeholder truncation

--- a/css/shackleton-online.css
+++ b/css/shackleton-online.css
@@ -333,7 +333,7 @@ blockquote {
     height: 44px; }
   .collection-search-form input {
   	float: right;
-    width: 325px;
+    width: 370px;
     padding: 0 10px;
     border: 1px #efefef solid;
     border-right: 0; }
